fix: text alignment in checkbox, radio, and switch (#412)
closes #406, closes #402, closes #403

--- a/components/checkbox/index.css
+++ b/components/checkbox/index.css
@@ -13,8 +13,14 @@ governing permissions and limitations under the License.
 @import '../commons/index.css';
 
 :root {
-  /* Hardcoded for wrapping study */
-  --spectrum-checkbox-label-margin-top: var(--spectrum-global-dimension-size-75);
+  /* Hardcoded for wrapping study.
+  Will be a DNA token in https://jira.corp.adobe.com/browse/SDS-4466
+  */
+  --spectrum-checkbox-label-margin-top: var(--spectrum-global-dimension-size-85);
+
+  /* Fix for inconsistent line-height between browsers that would push the label 1px below the intended baseline */
+  /* more info: https://stackoverflow.com/questions/47700568/css-fonts-render-differently-in-firefox-and-chrome */
+  --spectrum-checkbox-label-line-height: 1.49;
 }
 
 .spectrum-Checkbox {
@@ -53,7 +59,7 @@ governing permissions and limitations under the License.
   position: absolute;
   top: 0;
   left: calc(var(--spectrum-checkbox-cursor-hit-x) * -1);
-  width: calc(100% + var(--spectrum-checkbox-cursor-hit-x) * 2);;
+  width: calc(100% + var(--spectrum-checkbox-cursor-hit-x) * 2);
   height: 100%;
 
   opacity: .0001;
@@ -95,11 +101,11 @@ governing permissions and limitations under the License.
 
 .spectrum-Checkbox-label {
   margin-left: var(--spectrum-checkbox-text-gap);
+  margin-top: var(--spectrum-checkbox-label-margin-top);
   font-size: var(--spectrum-checkbox-text-size);
   font-weight: var(--spectrum-checkbox-text-font-weight);
+  line-height: var(--spectrum-checkbox-label-line-height);
   transition: color var(--spectrum-global-animation-duration-100) ease-in-out;
-
-  margin-top: var(--spectrum-checkbox-label-margin-top);
 }
 
 .spectrum-Checkbox-box {
